[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpx-engine"
version = "0.6.3"
authors = [
  { name="Be My Code", email="gettofarmila@gmail.com" },
]
description = "Автоматизация работы с FunPay"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx[http2,socks]>=0.24.0",
    "beautifulsoup4>=4.12.0",
]
[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
    "ruff>=0.4",
    "mypy>=1.10"
]

[project.urls]
"Homepage" = "https://github.com/bymyforge/fpx"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

